--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,13 +2,9 @@ cmake_minimum_required(VERSION 3.14)
 
 project(ApeConfigTest LANGUAGES CXX)
 
-include(FetchContent)
-
-FetchContent_Declare( catch
+amun_fetch_lib( catch
 	GIT_REPOSITORY https://github.com/catchorg/Catch2.git
 	GIT_TAG v2.9.1 )
-
-FetchContent_MakeAvailable(catch)
 
 
 add_executable(ape_config_test main.cpp)
@@ -16,4 +12,3 @@ target_compile_features(ape_config_test PUBLIC cxx_std_17)
 target_include_directories(ape_config_test PUBLIC ../include "${catch_SOURCE_DIR}/single_include")
 
 add_test(NAME run_test COMMAND ape_config_test )
-add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure -C $<CONFIG>)
