--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,9 @@ if(${CONFIG_NORMAL})
 	add_library(ape_config INTERFACE)
 	add_library(Ape::config ALIAS ape_config )
 	target_compile_features(ape_config INTERFACE cxx_std_17)
-	#target_include_directories(ape_config INTERFACE include)
+	if (MSVC)
+		target_compile_options(ape_config INTERFACE "/Zc:__cplusplus")
+	endif()
 	target_include_directories(ape_config INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:include>)
 endif()
 
