Change relative path to official Catch2 and upgrade the version to 2.13.10

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,14 +2,15 @@ cmake_minimum_required(VERSION 3.14)
 
 project(ApeConfigTest LANGUAGES CXX)
 
-amun_fetch_lib( catch
-	GIT_REPOSITORY ../Catch2.git
-	GIT_TAG v2.13.5 )
+amun_fetch_lib( Catch2
+	GIT_REPOSITORY ../../catchorg/Catch2
+	GIT_TAG v2.13.10 )
 
 
 amun_add_test(ape config
 	FEATURES cxx_std_20
 	SOURCES main.cpp
-	INCLUDES ../include "${catch_SOURCE_DIR}/single_include"
+	INCLUDES ../include
 	FOLDER unit_tests
+	LINKS Catch2::Catch2
 	)
