Upgrade Catch2 to v3.5.0

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,9 +2,9 @@ cmake_minimum_required(VERSION 3.14)
 
 project(ApeConfigTest LANGUAGES CXX)
 
-amun_fetch_lib( Catch2
+amun_fetch_lib(Catch2
 	GIT_REPOSITORY ../../catchorg/Catch2
-	GIT_TAG v2.13.10 )
+	GIT_TAG v3.5.0 )
 
 
 amun_add_test(ape config
@@ -12,5 +12,5 @@ amun_add_test(ape config
 	SOURCES main.cpp
 	INCLUDES ../include
 	FOLDER unit_tests
-	LINKS Catch2::Catch2
+	LINKS Catch2::Catch2 Catch2::Catch2WithMain
 	)
